# arms_ros2_control

./: .gitignore  .gitmodules  README.deb.md  README.md  README_CN.md  README_zh.md
command/arms_ros2_control_msgs/: CMakeLists.txt  package.xml
command/arms_ros2_control_msgs/action/: ExecuteLinear.action  JointTrajectory.action  MovecUseIK.action  WaistLiftingPose.action
command/arms_ros2_control_msgs/msg/: CircleMessage.msg  Gripper.msg  Inputs.msg  JointWaypoint.msg  LinearMessage.msg  VRControllerState.msg  WbcCapability.msg  WbcCurrentState.msg
command/arms_ros2_control_msgs/srv/: CartesianPath.srv  ExecuteCircle.srv  ExecuteLinear.srv  ExecutePath.srv  JointTrajectory.srv  KinematicsService.srv  MovecUseIK.srv
command/arms_rviz_control_plugin/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
command/arms_rviz_control_plugin/include/arms_rviz_control_plugin/: gripper_control_panel.hpp  joint_control_panel.hpp  ocs2_fsm_panel.hpp  switch_button.hpp  (+3 more)
command/arms_rviz_control_plugin/launch/: test_panel.launch.py
command/arms_rviz_control_plugin/src/: gripper_control_panel.cpp  joint_control_panel.cpp  ocs2_fsm_panel.cpp  switch_button.cpp  waist_control_panel.cpp  wbc_capability_panel.cpp  wbc_current_state_panel.cpp
command/arms_target_manager/: CMakeLists.txt  README.md  VR_INPUT_HANDLER_README.md  marker_refactor_notes.md  package.xml
command/arms_target_manager/config/: default.yaml
command/arms_target_manager/launch/: arms_target_manager.launch.py  ocs2_arm_target_manager.launch.py
command/arms_target_manager/src/: ArmsTargetManager.cpp  ControlInputHandler.cpp  MarkerFactory.cpp  VRInputHandler.cpp  arms_target_manager_node.cpp
command/arms_teleop/: CMakeLists.txt  README.md  package.xml
command/arms_teleop/config/: default.yaml  gamesir.yaml  gamesir_two.yaml  gamesir_two_arm.yaml  generic_ps4_controller.yaml  sony_dualshock4.yaml
command/arms_teleop/launch/: diff_drive.launch.py  joystick_teleop.launch.py
command/arms_teleop/src/: joystick_teleop.cpp  keyboard_teleop.cpp
command/dobot_force_msgs/: CMakeLists.txt  package.xml
commands/gripper_control/: CMakeLists.txt  README.md  package.xml
commands/gripper_control/include/: GripperControl.h
commands/gripper_control/launch/: gripper_control.launch.py
commands/gripper_control/src/: GripperControl.cpp
controller/adaptive_gripper_controller/: CMakeLists.txt  README.md  package.xml  ros_control_plugins.xml
controller/adaptive_gripper_controller/config/: ros2_controllers.yaml
controller/adaptive_gripper_controller/launch/: demo.launch.py
controller/adaptive_gripper_controller/src/: adaptive_gripper_action_controller.cpp  adaptive_gripper_controller.cpp
controller/basic_joint_controller/: CMakeLists.txt  README.md  README_zh.md  basic_joint_controller.xml  package.xml
controller/basic_joint_controller/config/: demo.rviz  hand.rviz
controller/basic_joint_controller/launch/: demo.launch.py  hand.launch.py
controller/basic_joint_controller/src/: BasicJointController.cpp
controller/ocs2_arm_controller/: CMakeLists.txt  README.md  ocs2_arm_controller.xml  package.xml
controller/ocs2_arm_controller/config/: demo.rviz  ocs2_arm_controller.yaml
controller/ocs2_arm_controller/examples/: example_usage.md
controller/ocs2_arm_controller/launch/: _ocs2_launch_common.py  demo.launch.py  demo_force_drag_fusion.launch.py  dobot_force_native.launch.py  full_body.launch.py  g1.launch copy.py  g1.launch.py  ocs2_admittance.launch.py  split_body.launch.py
controller/ocs2_arm_controller/src/: Ocs2ArmController.cpp  Ocs2G1Controller.cpp  force_drag_fusion_guard.cpp  hold_force_drag_guard.cpp
controller/unitree_g1_controller/: CMakeLists.txt  README.md  my_robot_controller_plugins.xml  package.xml
controller/unitree_g1_controller/config/: my_robot_controllers.yaml
controller/unitree_g1_controller/launch/: unitree_g1_controller.launch copy 2.py  unitree_g1_controller.launch copy.py  unitree_g1_controller.launch.py
controller/unitree_g1_controller/src/: MyRobotController copy 2.cpp  MyRobotController copy.cpp  MyRobotController.cpp  SimpleController.cpp
descriptions/panthera_description/: CMakeLists.txt  README.md  package.xml
descriptions/panthera_description/launch/: visualize.launch.py
descriptions/panthera_description/meshes/: gripper_1.mtl  gripper_center_link.mtl
descriptions/panthera_description/xacro/: robot.xacro
hardwares/arxlift2s_ros2_control/: .gitignore  CMakeLists.txt  README.md  arxlift2s_ros2_control.xml  package.xml
hardwares/arxlift2s_ros2_control/src/: arx_lift_hardware.cpp  arx_x5_hardware.cpp
hardwares/aubo_ros2_control/: CMakeLists.txt  README.md  aubo_ros2_control.xml  package.xml
hardwares/aubo_ros2_control/src/: aubo_commander.cpp  aubo_hardware.cpp  bluedot_force_sensor.cpp  bluedot_force_sensor_node.cpp
hardwares/dobot_dual_ros2_control/: CMakeLists.txt  README.md  dobot_dual_ros2_control.xml  package.xml
hardwares/dobot_dual_ros2_control/src/: dobot_dual_hardware.cpp
hardwares/eyou_ros2_control/: .gitignore  CMakeLists.txt  README.md  eyou_ros2_control.xml  package.xml
hardwares/eyou_ros2_control/src/: eyou_hardware.cpp
hardwares/rokae_ros2_control/: CMakeLists.txt  README.md  package.xml  rokae_ros2_control.xml
hardwares/rokae_ros2_control/launch/: visualize.launch.py
hardwares/rokae_ros2_control/src/: rokae_hardware.cpp
hardwares/tj2_ros2_control/: CMakeLists.txt  package.xml
hardwares/tj2_ros2_control/include/: tj2_hardware.h
hardwares/tj2_ros2_control/src/: tj2_hardware.cpp
libraries/arms_controller_common/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  JOINT_TRAJECTORY_MANAGER_ANALYSIS.md  README.md  TRAJECTORY_ANALYSIS.md  TRAJECTORY_IMPLEMENTATION.md  TRAJECTORY_MSG_INTERFACE_DESIGN.md  USAGE_EXAMPLES.md  package.xml
libraries/gripper_hardware_common/: CMakeLists.txt  README.md  package.xml
libraries/moveit_common_config/: CMakeLists.txt  README.md  package.xml
libraries/moveit_common_config/gazebo/: warehouse.world
libraries/moveit_common_config/launch/: demo.launch.py  servo.launch.py
(+349 files in other folders)
