<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arms_teleop</name>
  <version>0.0.0</version>
  <description>Unified teleoperation package for robotic arms with joystick and keyboard support</description>
  <maintainer email="biao876990970@hotmail.com">Huang Zhenbiao</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>arms_ros2_control_msgs</depend>
  <depend>arms_target_manager</depend>
  <depend>control_msgs</depend>
  <depend>rclcpp_action</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 