<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>basic_joint_controller</name>
	<version>0.0.0</version>
	<description>A basic joint controller with Home, Hold, and Move states</description>
	<maintainer email="biao876990970@hotmail.com">Huang Zhenbiao</maintainer>
	<license>Apache-2.0</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<depend>controller_interface</depend>
	<depend>pluginlib</depend>
	<depend>std_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>robot_common_launch</depend>
	<depend>arms_controller_common</depend>
	<depend>lina_planning</depend>

	<exec_depend>controller_manager</exec_depend>
	<exec_depend>joint_state_broadcaster</exec_depend>
	<exec_depend>rviz2</exec_depend>

	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>

