<package format="2">
  <name>panthera_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for panther_description</p>
    <p>This package contains configuration data, 3D models and launch files
      for panther_description robot
    </p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com"/>
  <license>BSD</license>

  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>