<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arxlift2s_ros2_control</name>
  <version>0.1.0</version>
  <description>
    ROS2 Control hardware interfaces for ARX LIFT2S:
    X5 dual arms (official InterfacesThread) and lift column (LiftHeadControlLoop).
    Intended as an arms_ros2_control/hardwares submodule.
  </description>

  <maintainer email="dev@fiveages.sim">FiveAges</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
